added more api documentation
