# internal/handlers/webhook_api.go
@@ -57,7 +57,7 @@ func (h *Handler) CreateWebhookApi(w http.ResponseWriter, r *http.Request) {
 		})
 		return
 	}
-	dto := dtos.NewWebhookDTO(&webhook)
+	dto := dtos.NewWebhookDTO(webhook)
 	dto.Requests = make([]models.WebhookRequest, 0)
 	utils.RenderJSON(w, http.StatusCreated, dto)
 }
@@ -83,15 +83,26 @@ func (h *Handler) ListWebhooksApi(w http.ResponseWriter, r *http.Request) {
 	utils.RenderJSON(w, http.StatusOK, webhooks)
 }
 
+// GetWebhookApi Gets a webhook by webhook ID
+// @Summary    Get webhook by ID
+// @Description Get a webhook by ID along with its requests
+// @Tags        Webhooks
+// @Produce     json
+// @Security     ApiKeyAuth
+// @Param        id   path      string  true  "Webhook ID"
+// @Success     200  {object} []dtos.Webhook
+// @Router      /webhooks/{id} [get]
 func (h *Handler) GetWebhookApi(w http.ResponseWriter, r *http.Request) {
 	webhookID := chi.URLParam(r, "id")
-	webhook, err := sqlstore.GetWebhook(h.DB, webhookID)
+	user := middlewares.GetAuthenticatedUser(r)
+	webhook, err := sqlstore.GetUserWebhook(h.DB, webhookID, user.ID)
 
 	if err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
 			utils.RenderJSON(w, http.StatusNotFound, map[string]string{
 				"error": "webhook not found",
 			})
+			return
 		}
 
 		h.Logger.Printf("error getting webhook: %v", err)
@@ -101,25 +112,32 @@ func (h *Handler) GetWebhookApi(w http.ResponseWriter, r *http.Request) {
 		})
 		return
 	}
-
-	utils.RenderJSON(w, http.StatusOK, webhook)
+	dto := dtos.NewWebhookDTO(webhook)
+	utils.RenderJSON(w, http.StatusOK, dto)
 }
 
+// UpdateWebhookApi Updates a webhook
+// @Summary  Updates a webhook
+// @Description Updates a webhook
+// @Tags        Webhooks
+// @Produce     json
+// @Security     ApiKeyAuth
+// @Param        id   path      string  true  "Webhook ID"
+// @Param        webhook body dtos.UpdateWebhookRequest true "Updated webhook"
+// @Success     200  {object} []dtos.Webhook
+// @Router      /webhooks/{id} [put]
 func (h *Handler) UpdateWebhookApi(w http.ResponseWriter, r *http.Request) {
 	webhookID := chi.URLParam(r, "id")
-
-	webhook := models.Webhook{
-		ID: webhookID,
+	user := middlewares.GetAuthenticatedUser(r)
+	webhook, err := sqlstore.GetUserWebhook(h.DB, webhookID, user.ID)
+	if err != nil {
+		utils.RenderJSON(w, http.StatusInternalServerError, map[string]string{
+			"error": err.Error(),
+		})
+		return
 	}
 
-	var input struct {
-		Title         string `json:"title"`
-		ResponseCode  int    `json:"response_code"`
-		ResponseDelay uint   `json:"response_delay"` // milliseconds
-		ContentType   string `json:"content_type"`
-		Payload       string `json:"payload"`
-		NotifyOnEvent bool   `json:"notify_on_event"`
-	}
+	input := dtos.UpdateWebhookRequest{}
 
 	if err := json.NewDecoder(r.Body).Decode(&input); err != nil {
 		utils.RenderJSON(w, http.StatusBadRequest, map[string]string{
@@ -161,20 +179,24 @@ func (h *Handler) UpdateWebhookApi(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	updated, err := sqlstore.GetWebhook(h.DB, webhookID)
-	if err != nil {
-		utils.RenderJSON(w, http.StatusInternalServerError, map[string]string{
-			"error": err.Error(),
-		})
-		return
-	}
-
-	utils.RenderJSON(w, http.StatusOK, updated)
+	dto := dtos.NewWebhookDTO(webhook)
+	utils.RenderJSON(w, http.StatusOK, dto)
 }
 
+// DeleteWebhookApi deletes a webhook
+// @Summary      Delete a webhook
+// @Description  Deletes a webhook
+// @Tags         Webhooks
+// @Produce      json
+// @Security     ApiKeyAuth
+// @Param        id   path      string  true  "Webhook ID"
+// @Success      204  {string}  string  "No Content"
+// @Failure      500  {object}  ErrorResponse
+// @Router       /webhooks/{id} [delete]
 func (h *Handler) DeleteWebhookApi(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
-	if err := sqlstore.DeleteWebhook(h.DB, id); err != nil {
+	user := middlewares.GetAuthenticatedUser(r)
+	if err := sqlstore.DeleteUserWebhook(h.DB, id, user.ID); err != nil {
 		utils.RenderJSON(w, http.StatusInternalServerError, map[string]string{
 			"error": err.Error(),
 		})
